# didatica-tech-course

./: README.md
module 1 - linear regression/: exercise1.ipynb  linear-regression.ipynb  main.ipynb
module 1 - other linear regression models/: elastic-net-regression.ipynb  lasso-regression.ipynb  ridge-regression.ipynb
module 1 - pre processing/: correlation.ipynb  exercice1.ipynb  exercice2.ipynb  missing-data.ipynb
module 1/2 - pre processing/: pyproject.toml
module 1/3 - other linear regression models/: comparing-different-models.ipynb  pyproject.toml
module-1/1-linear-regression/: pyproject.toml
module-1/1-linear-regression/exercises/: exercise1.ipynb
module-1/3-other-linear-regression-models/exercises/: exercise1.ipynb
module-1/4-cross-validation-and-fine-tuning-of-parameters/: kfold-cross-validation.ipynb  pyproject.toml
module-1/4-cross-validation-and-fine-tuning-of-parameters/exercices/: exercise1.ipynb
