[tool.poetry]
name = "2 - pre processing"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"
packages = [{include = "2 _ pre processing"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
