[tool.poetry]
name = "3 - other linear regression models"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"
packages = [{include = "3 _ other linear regression models"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
