[tool.poetry]
name = "1 - linear regression"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"
packages = [{include = "1 _ linear regression"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
