[tool.poetry]
name = "4-cross-validation-and-fine-tuning-of-parameters"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"
packages = [{include = "4_cross_validation_and_fine_tuning_of_parameters"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.3"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
